--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ body {
 
 .active-card {
   border: 4px solid #fad744;
+  border-radius: 10px;
 }
 
 .thumbnail {
@@ -116,6 +117,7 @@ body {
   width: 100%;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
+  pointer-events: none;
 }
 
 .video-card-title {
@@ -123,4 +125,5 @@ body {
   font-weight: 600;
   margin: 0;
   padding: 16px;
+  pointer-events: none;
 }
